    * You can copy & paste palettes inside the palette browser [Ralph]
    * Shop stock levels in saved games and when Testing Game are now updated if
      you edit the things in a shop - reset if needed, or increased/decreased
      to reflect the change [Ralph]
    * Copy/pasting of item definitions [Ralph]
    * New attack animation "Screen Center" [James]
    * Windows 98 is supported again! [Ralph]

  * New Plotscripting Features
    * "save screenshot" [Ralph]
    * "append number": added "min length" and "pad with zeroes" args [Ralph]
    * "use door": added "fade screen" argument, so you can use a door without
      fading [Ralph]
    * "npc copy number" (opposite to "npc reference") [Ralph]
    * "npc reference" can find tag-disabled npcs with "allow disabled" arg
      [Ralph]
    * "create line", "slice is line", "get line color", "set line color" [Ralph]
    * "force mount vehicle", "current vehicle id", "current vehicle npc" [James]
    * Missing constants for "get/set menu item subtype":
      menulabel:selectable, menulabel:disabled, menulabel:unselectable,
      menuspecial:map always, menuspecial:save always, menuspecial:margins,
      menuspecial:purchases, menuspecial:windowed, menuspecial:fullscreen,
      menuspecial:music volume, menuspecial:sound volume,
      and menutype:caption alias for menutype:label,
      and alias "menuitembit:close menu when activated",
      and missing constant "menubit:remember selection" [Ralph]
    * "get/set menu cancel button menu" and "get/set menu item spacing" [Ralph]
    * "menu item disabled", "menu item visible", "menu item selectable" [Ralph]
    * "get/set menu disabled textcolor", "get/set menu item color",
      "get/set menu item disabled color" [Ralph]
    * "pathfind hero to", "hero chases npc" and "cancel hero walk" [James]
    * NPCstat:pathfindingrule constant for "read npc"/"alter npc"
    * "read preference bit", "write preference bit" [Ralph]